kustomize/overlays/dev-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: efarm-frontend-ingress
  namespace: frontend
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    -  http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: efarm-frontend-svc
                port:
                  number: 80
